# chilean-growth

./: README.md  main.py  presentation.md  pyproject.toml  replicate.py
data/raw/: panel_data.csv
docs/: presentation.md
notebooks/: example_analysis.ipynb
results/: predictor_balance.csv  scm_series.csv  scm_weights.csv
scripts/: main.py  replicate.py
src/: __init__.py  causal_impact.py  config.py  data_loader.py  main.py  pyproject.toml  synthetic_control.py  visualization.py
src/chilean_growth/: data_loader.py  logger.py  synthetic_control.py
tests/: __init__.py  conftest.py  test_causal_impact.py  test_synthetic_control.py
