[project]
name = "chilean-growth-scm"
version = "0.1.0"
description = "Replication code for Toni, Paniagua & Ordenes (2023) - Policy Changes and Growth Slowdown in Chile using Synthetic Control and BSTS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cvxpy>=1.7.3",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "statsmodels>=0.14.5",
    "tqdm>=4.66.0",
    "wbgapi>=1.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.10.0",
    "pandas-stubs>=2.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N803", "N806"]  # Allow uppercase for math notation (X0, Y1)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
